Version 1.0.19

- Bugfixes
- Add Automatic Reconnection For SSH

Version 1.0.18

- Bugfixes

Version 1.0.16

- Add Bigger Preview For Templates And Notebooks
- Add Automatic IP-Address Adjustment After Update
- Better Icons
- Design Fixes
- Add Special ContextualMenu For Trash
- Stability Improvements
- Design Improvements
- Export Notebooks
- Export PDF With Annotations