@@ -198,5 +198,10 @@
 
   "View": "View",
 
-  "No Pages To Export Selected": "No Pages To Export Selected"
+  "No Pages To Export Selected": "No Pages To Export Selected",
+
+  "Select at least one page": "Select at least one page",
+  "No export path specified": "No export path specified",
+  "Export Path": "Export Path",
+  "Directory does not exist": "Directory does not exist"
 }
