@@ -2,6 +2,7 @@ Version 1.0.19
 
 - Bugfixes
 - Add Automatic Reconnection For SSH
+- Add Export Validation
 
 Version 1.0.18
 
